# rizin

./: .appveyor.yml  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .prettierignore  .pylintrc  .travis.disabled.yml  .travis.yml  AUTHORS.md  BUILDING.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Dockerfile.travis  Doxyfile  INSTALL.md  Makefile  RADARE2.AUTHORS.md  README.md  SECURITY.md  Vagrantfile.sh  autogen.sh  callgrind.out.15772  codecov.yml  config-user.mk.acr  configure  configure-plugins  configure.acr  env.sh  gentests.py  global.mk  loop.sh  meson.build  meson_options.txt  package.json  (+16 more)
bindings/: api_example.py  meson.build  rz_core.i
binrz/: Makefile  meson.build  rules.mk
binrz/blob/: Makefile  main.c  meson.build  meson_install_links.sh
binrz/man/: rizin.1  rz-agent.1  rz-asm.1  rz-ax.1  rz-bin.1  rz-diff.1  rz-esil.7  rz-find.1  rz-gg.1  rz-hash.1  rz-pm.1  rz-run.1  rz-sign.1  rz-test.1
binrz/preload/: Makefile  alloc.c  demo.c  librz2.c
binrz/rizin/: Info.plist  Makefile  macos_sign.sh  meson.build  rizin.c  rizin_ios.xml  rizin_macos.xml
binrz/rz-agent/: Makefile  meson.build  rz-agent.c
binrz/rz-asm/: Makefile  meson.build  rz-asm.c
binrz/rz-ax/: Makefile  meson.build  rz-ax.c
binrz/rz-bb/: Makefile  rz-bb.c
binrz/rz-bin/: Makefile  meson.build  patch.txt  rz-bin.c
binrz/rz-diff/: Makefile  meson.build  rz-diff.c
binrz/rz-find/: Makefile  meson.build  rz-find.c
binrz/rz-gg/: Makefile  meson.build  rz-gg.c  shellcodes.c.src  syscall.r  xorencoder.asm
binrz/rz-hash/: Makefile  meson.build  rz-hash.c
binrz/rz-pm/: rz-pm
binrz/rz-run/: Makefile  meson.build  rz-run.c
binrz/rz-sign/: Makefile  meson.build  rz-sign.c
binrz/rz-test/: Makefile  load.c  meson.build  run.c  rz-test.c  rz_test.h
binrz/rz_agent/: Makefile  meson.build
binrz/rz_asm/: Makefile  meson.build
binrz/rz_ax/: Makefile  meson.build  rz_ax.c
binrz/rz_bb/: Makefile
binrz/rz_bin/: Makefile  meson.build  rz_bin.c
binrz/rz_diff/: Makefile  meson.build
binrz/rz_find/: Makefile  meson.build
binrz/rz_gg/: Makefile  meson.build  xorencoder.asm
binrz/rz_hash/: Makefile  meson.build
binrz/rz_pm/: meson.build  rz-pm
binrz/rz_run/: Makefile  meson.build
binrz/rz_sign/: Makefile  meson.build
binrz/rz_test/: Makefile  load.c  meson.build  rz_test.c  rz_test.h
librz/: Makefile  README.md  RizinConfig.cmake.in  RzModulesConfig.cmake.in  config.h.head  config.h.in  config.mk.tail  do-ar-sh  librz.pc.acr  librz.pc.in  libs.mk  meson.build  plugins.h.in  rules.mk  shared_plugin.c.in  stripsyms.sh  symgraph.pl
librz/anal/: Makefile  anal.c  base_types.h  bb.c  block.c  cc.c  class.c  cond.c  cycles.c  data.c  diff.c  dwarf_process.c  esil.c  esil2reil.c  esil_cfg.c  esil_dfg.c  esil_interrupt.c  esil_sources.c  esil_stats.c  esil_trace.c  fcn.c  flirt.c  function.c  hint.c  jmptbl.c  labels.c  meson.build  meta.c  op.c  pin.c  reflines.c  rtti.c  rtti_itanium.c  rtti_msvc.c  serialize_anal.c  sign.c  switch.c  type.c  type_pdb.c  value.c  (+3 more)
librz/analysis/: Makefile  anal.c  analysis.c  analysis_private.h  arch_platform.c  arch_profile.c  base_types.h  bb.c  block.c  cc.c  class.c  cond.c  cycles.c  data.c  diff.c  dwarf_process.c  esil.c  esil2reil.c  esil_cfg.c  esil_dfg.c  esil_interrupt.c  esil_sources.c  esil_stats.c  esil_trace.c  fcn.c  flirt.c  function.c  hint.c  il_trace.c  jmptbl.c  labels.c  meson.build  meta.c  op.c  pdb_process.c  pin.c  platform_profile.c  platform_target_index.c  reflines.c  rtti.c  (+17 more)
librz/arch/: acode.c  analysis.c  analysis_private.h  aop.c  arch.c  asm.c  binutils_as.c  binutils_as.h  block.c  cc.c  class.c  cond.c  data.c  deprecated_arch_helper.h  dwarf_process.c  fcn.c  filter.c  function.c  hint.c  il_trace.c  jmptbl.c  labels.c  meson.build  meta.c  op.c  parse.c  parse_helper.c  parse_helper.h  pdb_process.c  platform_profile.c  platform_target_index.c  reflines.c  rtti_itanium.c  rtti_msvc.c  serialize_analysis.c  similarity.c  switch.c  types.c  value.c  var.c  (+3 more)
librz/asm/: Makefile  acode.c  aop.c  asm.c  assembler.c  assembler_directives.c  binutils_as.c  binutils_as.h  deleteme.c  meson.build
librz/bp/: Makefile  README  bp.c  bp_io.c  bp_plugin.c  bp_traptrace.c  bp_watch.c  meson.build  serialize_bp.c
librz/config/: Makefile  callback.c  config.c  hold.c  meson.build  serialize_config.c
librz/cons/: 2048.c  Makefile  README  bar.c  canvas.c  canvas_line.c  cons.c  cpipe.c  cutf8.c  dietline.c  editor.c  grep.c  histogram.c  html.c  hud.c  input.c  less.c  line.c  meson.build  more.c  output.c  pager.c  pager_private.h  pal.c  prompt.c  rgb.c  stiv.c
librz/core/: Makefile  agraph.c  anal_objc.c  anal_tp.c  analysis_objc.c  analysis_tp.c  basefind.c  blaze.c  cagraph.c  canal.c  canalysis.c  cannotated_code.c  carg.c  casm.c  cautocmpl.c  cbin.c  cconfig.c  ccrypto.c  cdebug.c  cdwarf.c  cesil.c  cfile.c  cflag.c  cflirt.c  cgraph.c  chash.c  cheap.c  cil.c  cio.c  citem.c  clang.c  cmd.c  cmd_anal.c  cmd_analysis.c  cmd_api.c  cmd_cmp.c  cmd_colon.c  cmd_debug.c  cmd_descs.c  cmd_descs.h  (+103 more)
librz/crypto/: Makefile  crypto.c  des.c  meson.build
librz/debug/: Makefile  arg.c  ddesc.c  debug.c  debugger.c  desil.c  dmap.c  dreg.c  dsession.c  dsignal.c  meson.build  pid.c  plugin.c  serialize_debug.c  snap.c  trace.c
librz/demangler/: demangler.c  demangler_plugins.c  meson.build
librz/diff/: bytes_diff.c  diff.c  distance.c  lines_diff.c  meson.build  old.c  unified_diff.c
librz/egg/: Makefile  README  egg.c  egg_Cfile.c  egg_lang.c  emit_arm.c  emit_trace.c  emit_x64.c  emit_x86.c  meson.build
librz/flag/: Makefile  flag.c  meson.build  serialize_flag.c  tags.c  zones.c
librz/flirt/: flirt.c  meson.build
librz/fs/: Makefile  fs.c  fs_file.c  meson.build  shell.c  types.h
librz/hash/: Makefile  adler32.c  crca.c  entropy.c  fletcher.c  hamdist.c  hash.c  hash.h  hcalc.c  luhn.c  md4.c  md4.h  md5.c  md5.h  meson.build  msg_digest.c  randomart.c  (+7 more)
shlr/: Makefile  capstone.sh  meson.build  rizin-shell-parser-deps.mk
(+4364 files in other folders)
